volexc/tests/ui/recovery_struct_multiple.vol
// Multiple errors in same struct - recovery should report all
struct Point {
    x: u32
    y: u32;
    z: u32
    w: u32;
}
